Bug 148988 - X-Y Lines (scatter) -> 3 D lines freezes chart dialog
Summary: X-Y Lines (scatter) -> 3 D lines freezes chart dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.1.1 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 inReleaseNotes:26.2
Keywords:
Depends on:
Blocks: Performance
  Show dependency treegraph
 
Reported: 2022-05-08 18:48 UTC by Telesto
Modified: 2025-10-06 14:34 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (60.68 KB, application/vnd.oasis.opendocument.spreadsheet)
2022-05-08 18:48 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2022-05-08 18:48:25 UTC
Description:
X-Y Lines (scatter) -> 3 D lines freezes chart dialog

Steps to Reproduce:
1. Open the attached file
2. Select column A & B
3. Press Insert Chart
4. Select X-Y Scatter
5. Select Most right 3D Lines

Actual Results:
Freezes

Expected Results:
Being responsive


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 00e43c14558fa4d0369820fa3d2cd7b987e61377
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (nl_NL); UI: en-GB
Calc: CL Jumbo
Comment 1 Telesto 2022-05-08 18:48:38 UTC
Created attachment 180005 [details]
Example file
Comment 2 raal 2022-05-08 21:24:22 UTC
Confirm Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 08c979e235aa993f50e54224f8c715bb70697c33
CPU threads: 4; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded Jumbo

And Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
Comment 3 QA Administrators 2025-04-12 03:12:18 UTC Comment hidden (noise)
Comment 4 Commit Notification 2025-09-08 19:13:25 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/18bde21b1d700bbf97e001a13ba9389dc7f9efc7

tdf#148988 X-Y Lines (scatter) -> 3 D lines freezes chart dialog

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.