tdf#148988 X-Y Lines (scatter) -> 3 D lines freezes chart dialog

speed up invalidation of 3-d graphs. Goes from several seconds
to 1 second.
We had a kind of O(n^2) problem, where we would invalidate a
sub-tree, then call the parent, and the parent would invalidate
the whole subtree, then call it's parent....

Change-Id: I8f36f180a9715a1a401e1f16579201e1d141bb60
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190683
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins